syntax = "proto3";
 
option csharp_namespace = "PsychologicalSupportPlatform.Common.Protos";
  
package user;
 
service UserChecker {
  rpc CheckUser (UserRequest) returns (UserReply);
}
 
message UserRequest {
  int32 userId = 1;
}
 
message UserReply {
  bool exists = 1; 
  string role = 2;
}
